--- a/app/views/leagues/show.html.erb
+++ b/app/views/leagues/show.html.erb
@@ -30,7 +30,7 @@
           <p>No active season</p>
         <% end %>
     <% else %>
-      <p><%= form_tag join_index_path(@league.id) do %><%= submit_tag "Sign up to this league", class: "btn btn-success" %><% end %></p>
+      <p><%= form_tag league_join_index_path(@league.id) do %><%= submit_tag "Sign up to this league", class: "btn btn-success" %><% end %></p>
     <% end %>
   </div>
 
