--- a/app/views/leagues/_form.html.erb
+++ b/app/views/leagues/_form.html.erb
@@ -10,21 +10,25 @@
       <label class="checkbox" style="font-weight:normal;"><%= f.radio_button :privacy, "open" %> <strong>Public</strong> &ndash; Anyone can join</label>
       <label class="checkbox" style="font-weight:normal;"><%= f.radio_button :privacy, "closed" %> <strong>Private</strong> &ndash; Requests must be approved</label>
       <label class="checkbox" style="font-weight:normal;"><%= f.radio_button :privacy, "invitational" %> <strong>Invitational</strong> &ndash; Players must be invited</label>
-      <small class="help-block">League tables for Private leagues will not be visible to non-members; Invitational league tables will be public</small>
+    </div>
+  </div>
+  <div class="form-group">
+    <%= f.label :table_privacy, "Table Privacy", class: "col-md-4 control-label" %>
+    <div class="col-md-8">
+      <%= f.select :table_privacy, options_for_select([["Public - visible to everyone","public"],["Private - visible only to members","private"]], @league.table_privacy), {}, { class: "form-control" } %>
     </div>
   </div>
   <div class="form-group">
     <%= f.label :location_type, "Location", class: "col-md-4 control-label" %>
     <div class="col-md-4">
-      <%= f.select :location_type, options_for_select([["Offline","offline"],["Online","online"]]), {}, { id:"type-select", class: "form-control" } %>
+      <%= f.select :location_type, options_for_select([["Offline","offline"],["Online","online"]], @league.location_type), {}, { id:"type-select", class: "form-control" } %>
     </div>
     <div class="col-md-4">
       <div class="location-select offline">
         <%= text_field_tag :lookup_address, @league.latlong, id: "lookup-address", class: "form-control" %>
       </div>
-      <div class="location-select online" style="display:none;">
+      <div class="location-select online">
         <%= f.text_field :online_location, placeholder: "http://...", class: "form-control" %>
-        <small class="help-block">The URL for the site/tool that games will be played with.</small>
       </div>
     </div>
   </div>
@@ -86,17 +90,32 @@ var setMapPicker = function(latitude,longitude){
   });
 }
 
-$(document).ready(function(){
+var toggleLocation = function(){
+  <% if @league.location_type == "offline" %>
+    $('.online').hide();
+  <% elsif @league.location_type == "online" %>
+    $('.offline').hide();
+  <% end %>
+}
+
+var form_ready = function(){
   <% if @league.latitude.blank? || @league.latitude == 0 %>
     getLocation();
   <% else %>
     setMapPicker(latitude,longitude);
   <% end %>
 
+    window.setTimeout(toggleLocation,500);
+
+
   $('#type-select').on('change',function(e){
     var show = $(this).val();
     $('.location-select').hide();
     $('.location-select.'+show).show();
   });
-});
+
+};
+
+$(document).ready(form_ready);
+$(document).on('page:load', form_ready);
 </script>
