--- a/app/views/leagues/new.html.erb
+++ b/app/views/leagues/new.html.erb
@@ -1,7 +1,7 @@
 <h1>Create a new League</h1>
 
 <div class="row">
-  <div class="col-md-6">
+  <div class="col-md-8 col-md-offset-2">
     <%= form_for @league, url: leagues_path, html: { class: "form-horizontal" } do |f| %>
       <%= render partial: "leagues/form", locals: { f: f } %>
     <% end %>
