--- a/app/views/layouts/iframe.html.erb
+++ b/app/views/layouts/iframe.html.erb
@@ -12,21 +12,10 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
-  <body>
-    <%= render partial: "shared/head" %>
-    <div id="body">
+  <body id="iframe">
     <div class="container">
       <%= render partial: "shared/alerts" %>
       <%= yield %>
-      <%= console if Rails.env == "development" %>
     </div>
-    </div>
-    
-    <%= render partial: "shared/foot" %>
   </body>
-
-  <% if Rails.env == "production" %>
-    <%= stylesheet_link_tag "http://cdnjs.cloudflare.com/ajax/libs/qtip2/2.1.1/jquery.qtip.css","http://netrunnerdb.com/bundles/netrunnerdbbuilder/css/icons.css" %>
-    <%= javascript_include_tag "http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js","http://cdnjs.cloudflare.com/ajax/libs/qtip2/2.1.1/jquery.qtip.js","http://cdnjs.cloudflare.com/ajax/libs/taffydb/2.7.2/taffy-min.js","http://netrunnerdb.com/bundles/netrunnerdbbuilder/js/nrdb.data.js","http://netrunnerdb.com/bundles/netrunnerdbbuilder/js/nrdb.format.js","http://netrunnerdb.com/bundles/netrunnerdbbuilder/js/nrdb.tip.js" %>
-  <% end %>
 </html>
