--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,8 +25,6 @@
     <%= render partial: "shared/foot" %>
   </body>
 
-  <% if Rails.env == "production" %>
-    <%= stylesheet_link_tag "http://cdnjs.cloudflare.com/ajax/libs/qtip2/2.1.1/jquery.qtip.css","http://netrunnerdb.com/bundles/netrunnerdbbuilder/css/icons.css" %>
-    <%= javascript_include_tag "http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js","http://cdnjs.cloudflare.com/ajax/libs/qtip2/2.1.1/jquery.qtip.js","http://cdnjs.cloudflare.com/ajax/libs/taffydb/2.7.2/taffy-min.js","http://netrunnerdb.com/bundles/netrunnerdbbuilder/js/nrdb.data.js","http://netrunnerdb.com/bundles/netrunnerdbbuilder/js/nrdb.format.js","http://netrunnerdb.com/bundles/netrunnerdbbuilder/js/nrdb.tip.js" %>
-  <% end %>
+  <%# <%= stylesheet_link_tag "http://cdnjs.cloudflare.com/ajax/libs/qtip2/2.1.1/jquery.qtip.css","http://netrunnerdb.com/bundles/netrunnerdbbuilder/css/icons.css" %1> %>
+  <%# <%= javascript_include_tag "http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js","http://cdnjs.cloudflare.com/ajax/libs/qtip2/2.1.1/jquery.qtip.js","http://cdnjs.cloudflare.com/ajax/libs/taffydb/2.7.2/taffy-min.js","http://netrunnerdb.com/bundles/netrunnerdbbuilder/js/nrdb.data.js","http://netrunnerdb.com/bundles/netrunnerdbbuilder/js/nrdb.format.js","http://netrunnerdb.com/bundles/netrunnerdbbuilder/js/nrdb.tip.js" %1> %>
 </html>
