--- a/app/views/shared/_foot.html.erb
+++ b/app/views/shared/_foot.html.erb
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-4">
-        <h4><%= link_to "About", "#" %></h4>
+        <h4><%= link_to "About", about_path %></h4>
       </div>
     </div>
     <p><small>This website is not produced, endorsed, supported, or affiliated with <%= link_to "Fantasy Flight Games", "#", target:"_blank" %> and/or <%= link_to "Wizards of the Coast", "#", target:"_blank" %>.</small></p>
