google analytics code

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,8 @@
     <%# <%= stylesheet_link_tag "http://cdnjs.cloudflare.com/ajax/libs/qtip2/2.1.1/jquery.qtip.css","http://netrunnerdb.com/bundles/netrunnerdbbuilder/css/icons.css" %1> %>
     <%# <%= javascript_include_tag "http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js","http://cdnjs.cloudflare.com/ajax/libs/qtip2/2.1.1/jquery.qtip.js","http://cdnjs.cloudflare.com/ajax/libs/taffydb/2.7.2/taffy-min.js","http://netrunnerdb.com/bundles/netrunnerdbbuilder/js/nrdb.data.js","http://netrunnerdb.com/bundles/netrunnerdbbuilder/js/nrdb.format.js","http://netrunnerdb.com/bundles/netrunnerdbbuilder/js/nrdb.tip.js" %1> %>
 
+    <%= render partial: "shared/ga" if Rails.env == "production" %>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
