--- a/app/assets/stylesheets/netrunner.scss
+++ b/app/assets/stylesheets/netrunner.scss
@@ -1,16 +1,17 @@
 @font-face {
-	font-family: 'netrunner';
-	src:font-url('netrunner.eot') format('embedded-opentype'),
-		font-url('netrunner.woff') format('woff'),
-		font-url('netrunner.ttf') format('truetype'),
-		font-url('netrunner.svg') format('svg');
-	font-weight: normal;
-	font-style: normal;
+    font-family: 'netrunner';
+    src:    font-url('netrunner.eot?y6hcdy');
+    src:    font-url('netrunner.eot?y6hcdy#iefix') format('embedded-opentype'),
+        font-url('netrunner.ttf?y6hcdy') format('truetype'),
+        font-url('netrunner.woff?y6hcdy') format('woff'),
+        font-url('netrunner.svg?y6hcdy#netrunner') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 
-[class^="nr-"], [class*=" nr-"] {
-  &:before{
-    font-family: 'netrunner';
+.nr:before{
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'netrunner' !important;
     speak: none;
     font-style: normal;
     font-weight: normal;
@@ -21,102 +22,151 @@
     /* Better Font Rendering =========== */
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-  }
 }
 
 //
+// Card icons
 //
+
+.nr-subroutine:before {
+    content: "\e900";
+}
+.nr-mu3:before {
+    content: "\e901";
+}
+.nr-mu2:before {
+    content: "\e902";
+}
+.nr-mu1:before {
+    content: "\e903";
+}
+.nr-mu:before {
+    content: "\e904";
+}
+.nr-trash:before {
+    content: "\e905";
+}
+.nr-link-half-top:before {
+    content: "\e906";
+}
+.nr-link-half-bottom:before {
+    content: "\e907";
+}
+.nr-link:before {
+    content: "\e908";
+}
+.nr-click:before {
+    content: "\e909";
+}
+.nr-recurring-credit:before {
+    content: "\e90a";
+}
+.nr-credit:before {
+    content: "\e90b";
+}
+
 //
-.nr-runner{ color:red; }
-.nr-corp{ color:blue; }
+// Card Sets
+//
+
+.nr-core:before {
+    content: "\e914";
+}
+.nr-genesis:before {
+    content: "\e911";
+}
+.nr-creation-and-control:before {
+    content: "\e913";
+}
+.nr-spin:before {
+    content: "\e90c";
+}
+.nr-honor-and-profit:before {
+    content: "\e910";
+}
+.nr-lunar:before {
+    content: "\e90f";
+}
+.nr-order-and-chaos:before {
+    content: "\e90e";
+}
+.nr-sansan:before {
+    content: "\e90d";
+}
+.nr-data-and-destiny:before {
+    content: "\e912";
+}
+.nr-mumbad:before {
+    content: "\e91f";
+}
 
 //
 // Factions
 //
 
-.nr-anarch {
-	color:orangered;
-	&:before { content: "\e605"; }
+.nr-anarch{
+  color:orangered;
+  &:before {
+    content: "\e91a";
+  }
+}
+.nr-criminal{
+  color:royalblue;
+  &:before {
+    content: "\e919";
+  }
+}
+.nr-shaper{
+  color:limegreen;
+  &:before {
+    content: "\e91b";
+  }
+}
+.nr-jinteki{
+  color:crimson;
+  &:before {
+    content: "\e916";
+  }
+}
+.nr-haas-bioroid{
+  color:blueviolet;
+  &:before{
+    content: "\e918";
+  }
+}
+.nr-nbn{
+  color:darkorange;
+  &:before {
+    content: "\e915";
+  }
+}
+.nr-weyland-consortium{
+  color:darkgreen;
+  &:before{
+    content: "\e917";
+  }
 }
 
-.nr-criminal {
-	&:before {content: "\e612"; }
-	color:royalblue;
-}
-.nr-shaper {
-  &:before { content: "\e613"; }
-	color:#37A937;
+.nr-adam,
+.nr-apex,
+.nr-sunny-lebeau{
+  color:#555;
 }
 
-.nr-hb,
-.nr-haas-bioroid {
-	&:before { content: "\e602"; }
-	color:blueviolet;
+.nr-adam:before {
+    content: "\e91d";
+}
+.nr-apex:before {
+    content: "\e91e";
+}
+.nr-sunny-lebeau:before{
+    content: "\e91c";
 }
 
-.nr-weyland {
-	&:before { content: "\e607"; }
-	color:darkgreen;
+.nr-neutral{
+  color:#555;
+  &:before{
+    // Link icon
+    content: "\e908";
+  }
 }
-
-.nr-jinteki {
-	&:before { content: "\e609"; }
-	color:crimson;
-}
-
-.nr-nbn {
-	&:before { content: "\e60b"; }
-	color:darkorange;
-}
-
-//
-// Card sets
-//
-
-.nr-core {
-	&:before { content: "\e618"; }
-}
-
-.nr-genesis {
-	&:before { content: "\e616"; }
-}
-
-.nr-spin {
-	&:before { content: "\e615"; }
-}
-
-.nr-cc,.nr-creation-and-control {
-	&:before { content: "\e617"; }
-}
-
-.nr-hp,.nr-honor-and-profit {
-	&:before { content: "\e614"; }
-}
-
-.nr-lunar {
-	&:before { content: "\e619"; }
-}
-
-.nr-oc,.nr-order-and-chaos {
-	&:before { content: "\e61a"; }
-}
-
-//
-// Actions
-//
-.nr-click{ &:before{ content: "\e611"; } }
-.nr-link{ &:before{ content: "\e601"; } }
-.nr-trash{ &:before{ content: "\e606"; } }
-
-.nr-credit:before{ content: "\e600"; }
-.nr-credit-recur{ &:before{ content: "\e608"; } }
-
-.nr-mem{ &:before{ content: "\e610"; } }
-.nr-mem-1{ &:before{ content: "\e60a"; } }
-.nr-mem-2{ &:before{ content: "\e60c"; } }
-.nr-mem-3{ &:before{ content: "\e60e"; } }
-
-.nr-agenda:before { content: "\e60d"; }
-
-.nr-ice{ &:before{ content: "\e60f"; } }
-.nr-sub,.nr-subroutine{ &:before{ content: "\e604"; } }
