--- a/app/views/admin/results/edit.html.erb
+++ b/app/views/admin/results/edit.html.erb
@@ -1,3 +1,9 @@
+<ul class="breadcrumb">
+  <li><%= link_to "Admin", admin_path %></li>
+  <li><%= link_to "Results", admin_results_path %></li>
+  <li class="active">Edit</li>
+</ul>
+
 <h1>Edit Game Result</h1>
 
 <%= render partial: "admin/results/form", locals: { result: @result } %>
