--- a/app/views/admin/results/index.html.erb
+++ b/app/views/admin/results/index.html.erb
@@ -1,3 +1,8 @@
+<ul class="breadcrumb">
+  <li><%= link_to "Admin", admin_path %></li>
+  <li class="active">Results</li>
+</ul>
+
 <h1>Game Results</h1>
 
 <h3>New result</h3>
@@ -10,8 +15,7 @@
       <tr>
         <th>Display name</th>
         <th>Winning side</th>
-        <th class="narrow"><!-- edit --></th>
-        <th class="narrow"><!-- delete --></th>
+        <th style="width:120px;"><!-- actions --></th>
       </tr>
     </thead>
     <tbody>
@@ -21,12 +25,8 @@
           <td><%= result.display_name %></td>
           <td><%= result.winning_side.humanize %></td>
           <td>
-            <%= link_to edit_admin_result_path(result.id) do %>
-              <i class="fa fa-edit"></i>
-            <% end %>
-          </td>
-          <td>
-            <%= link_to '<i class="fa fa-remove"></i>'.html_safe, "javascript:void(0)", "data-action": "delete", "data-href":admin_result_path(result.id) %>
+            <%= link_to "Edit", edit_admin_result_path(result.id), class: "btn btn-info btn-xs" %>
+            <%= link_to "Delete", "javascript:void(0)", class:"btn btn-danger btn-xs", "data-action": "delete", "data-href":admin_result_path(result.id) %>
           </td>
         </tr>
       <% end %>
