--- a/app/views/shared/_alerts.html.erb
+++ b/app/views/shared/_alerts.html.erb
@@ -2,7 +2,7 @@
   <% flash.to_hash.each do |key,msg| %>
     <div class="alert alert-<%= alert_flash(key) %> alert-dismissable">
       <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-      <p><%= msg %></p>
+      <p><%= msg.html_safe %></p>
     </div>
   <% end %>
 <% end %>
