--- a/app/views/shared/_recaptcha.html.erb
+++ b/app/views/shared/_recaptcha.html.erb
@@ -1,1 +1,2 @@
 <div class="g-recaptcha" data-sitekey="<%= ENV['RECAPTCHA_PUBLIC_KEY'] %>"></div>
+<script src='https://www.google.com/recaptcha/api.js'></script>
