--- a/app/views/leagues/edit.html.erb
+++ b/app/views/leagues/edit.html.erb
@@ -4,7 +4,7 @@
   <div class="col-md-6">
     <h3>League details</h3>
     <%= form_for @league, url: league_path(@league.id), html: { class: "form-horizontal" } do |f| %>
-      <%= render partial: "leagues/form", locals: { f: f } %>
+      <%= render partial: "leagues/form", locals: { f: f, league: @league } %>
     <% end %>
   </div>
 
