--- a/app/views/leagues/new.html.erb
+++ b/app/views/leagues/new.html.erb
@@ -3,7 +3,7 @@
 <div class="row">
   <div class="col-md-8 col-md-offset-2">
     <%= form_for @league, url: leagues_path, html: { class: "form-horizontal" } do |f| %>
-      <%= render partial: "leagues/form", locals: { f: f } %>
+      <%= render partial: "leagues/form", locals: { f: f, league: @league } %>
     <% end %>
   </div>
 </div>
