--- a/app/views/profile/new.html.erb
+++ b/app/views/profile/new.html.erb
@@ -54,6 +54,12 @@
 
           <div class="form-group">
             <div class="col-md-8 col-md-offset-4">
+              <%= render partial: "shared/recaptcha" %>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <div class="col-md-8 col-md-offset-4">
               <%= f.submit "Register", class: "btn btn-success" %>
               <%= link_to "Log in", login_path, class: "btn btn-link" %>
             </div>
