--- a/app/views/leagues/_form.html.erb
+++ b/app/views/leagues/_form.html.erb
@@ -5,7 +5,7 @@
     </div>
   </div>
   <div class="form-group">
-    <%= f.label :privacy, "Privacy", class: "col-md-4 control-label" %>
+    <%= f.label :privacy, "Memberships", class: "col-md-4 control-label" %>
     <div class="col-md-8">
       <label class="checkbox" style="font-weight:normal;"><%= f.radio_button :privacy, "open" %> <strong>Public</strong> &ndash; Anyone can join</label>
       <label class="checkbox" style="font-weight:normal;"><%= f.radio_button :privacy, "closed" %> <strong>Private</strong> &ndash; Requests must be approved</label>
@@ -13,7 +13,7 @@
     </div>
   </div>
   <div class="form-group">
-    <%= f.label :table_privacy, "Table Privacy", class: "col-md-4 control-label" %>
+    <%= f.label :table_privacy, "League table", class: "col-md-4 control-label" %>
     <div class="col-md-8">
       <%= f.select :table_privacy, options_for_select([["Public - visible to everyone","public"],["Private - visible only to members","private"]], league.table_privacy), {}, { class: "form-control" } %>
     </div>
