--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -198,9 +198,22 @@ table.table thead tr th.narrow{
 }
 
 // Misc
-.league_member{
+hr{
+  border-top:1px solid #CCC;
+}
+
+.league-officer{
+  font-size:0.8em;
+  color:#C00;
+}
+
+.league-member{
   font-size:0.8em;
   color:#FC0;
+}
+
+.dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus{
+  .league-officer,.league-member{ color: $white; }
 }
 
 .modal-header.danger{
