more unified deletion modal and button using partials (move to helper?)

--- a/app/views/admin/identities/index.html.erb
+++ b/app/views/admin/identities/index.html.erb
@@ -34,7 +34,7 @@
             </td>
             <td>
               <%= link_to "Edit", edit_admin_identity_path(identity.id), class: "btn btn-info btn-xs" %>
-              <%= link_to "Delete", "javascript:void(0)", class:"btn btn-danger btn-xs", "data-action": "delete", "data-href":admin_identity_path(identity.id) %>
+              <%= delete_button(admin_identity_path(identity.id),"identity") %>
             </td>
           </tr>
         <% end %>
