--- a/app/views/admin/results/index.html.erb
+++ b/app/views/admin/results/index.html.erb
@@ -26,7 +26,7 @@
           <td><%= result.winning_side.humanize %></td>
           <td>
             <%= link_to "Edit", edit_admin_result_path(result.id), class: "btn btn-info btn-xs" %>
-            <%= link_to "Delete", "javascript:void(0)", class:"btn btn-danger btn-xs", "data-action": "delete", "data-href":admin_result_path(result.id) %>
+            <%= delete_button(admin_result_path(result.id),"game result") %>
           </td>
         </tr>
       <% end %>
