--- a/app/views/shared/_delete_confirmation_modal.html.erb
+++ b/app/views/shared/_delete_confirmation_modal.html.erb
@@ -1,10 +1,9 @@
-<% model_name ||= "item" %>
 <% additional_message ||= "" %>
 <div class="modal fade" id="confirm-delete" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-sm">
         <div class="modal-content">
             <div class="modal-header danger">
-                Are you sure you want to delete the specified <%= model_name %>?
+              Are you sure you want to delete the specified <span id="modal-delete-model-name">item</span>?
             </div>
             <% unless additional_message.blank? %>
               <div class="modal-body">
@@ -20,15 +19,20 @@
 </div>
 
 <script type="text/javascript">
-var delete_url = '';
 $('[data-action="delete"]').on('click', function(e) {
     var t = $(this);
     e.preventDefault();
-    delete_url = t.attr("data-href");
+    var modelName = t.attr("data-model-name");
+
+    if(modelName == undefined || modelName == ""){
+      modelName = "item";
+    }
+    $('#modal-delete-model-name').html(modelName);
+    $('#modal-delete-confirmed').attr("href",t.attr("data-href"));
     $('#confirm-delete').modal('show');
 });
 
-$('#confirm-delete').on('show.bs.modal', function(e) {
-  $('#modal-delete-confirmed').attr("href",delete_url);
-});
+//$('#confirm-delete').on('show.bs.modal', function(e) {
+  //$('#modal-delete-confirmed').attr("href",delete_url);
+//});
 </script>
