--- a/app/views/shared/_foot.html.erb
+++ b/app/views/shared/_foot.html.erb
@@ -6,6 +6,6 @@
         <h4><%= link_to "About", about_path %></h4>
       </div>
     </div>
-    <p><small>This website is not produced, endorsed, supported, or affiliated with <%= link_to "Fantasy Flight Games", "#", target:"_blank" %> and/or <%= link_to "Wizards of the Coast", "#", target:"_blank" %>.</small></p>
+    <p><small>This website is not produced, endorsed, supported, or affiliated with <%= link_to "Fantasy Flight Games", "https://www.fantasyflightgames.com/", target:"_blank" %> and/or <%= link_to "Wizards of the Coast", "https://company.wizards.com/", target:"_blank" %>.</small></p>
   </div>
 </footer>
