--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Welcome to <%= SITE_NAME %></h1>
 
 <div class="row">
-  <div class="col-md-8">
+  <div class="col-md-6">
     <% if logged_in? %>
       <h3>Logged in users</h3>
       <p>List of games from membership leagues?</p>
@@ -13,7 +13,7 @@
   </div>
 
   <div class="col-md-4">
-    <h3>Recently started</h3>
+    <h3>Recently started seasons</h3>
     <ul class="list-unstyled">
       <% @recent.each do |season| %>
         <li><%= pretty_date(season.activated_at) %> &ndash; <%= link_to season.league.display_name, league_path(season.league_id) %>, <%= season.display_name %></li>
