--- a/app/views/leagues/_short.html.erb
+++ b/app/views/leagues/_short.html.erb
@@ -1,7 +1,4 @@
-<h3>
-  <%= link_to league.display_name, show_league_path(league.id,league.slug) %>
-  <%= league_member(league) %>
-</h3>
-<p><small><% if league.offline? && !league.offline_location.blank? %><%= league.offline_location %><% elsif !league.online_location.blank? %><%= link_to league.online_location, league.online_location, target:"_blank" %><% end %></small></p>
+<% user ||= current_user %>
+<%= render partial: "leagues/mini", locals: { league: league, user: user } %>
 <p><%= strip_tags(league.description_html || "").truncate(100) %></p>
 <hr />
