--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -14,23 +14,14 @@
 <p>Not sure what other profile information should go here</p>
 
 <div class="row">
-  <div class="col-md-6">
+  <div class="col-md-4">
     <h3>League Memberships</h3>
     <% if @user.leagues.any? %>
       <% @user.leagues.each do |league| %>
-        <%= render partial: "leagues/mini", locals: { league: league } %>
+        <%= render partial: "leagues/mini", locals: { league: league, user: @user } %>
       <% end %>
     <% else %>
       <p><%= @own_profile ? "You have" : "This user has" %>n't joined any leagues yet.</p>
     <% end %>
   </div>
-
-  <% if @user.owned_leagues.any? %>
-    <div class="col-md-6">
-      <h3>Owner of</h3>
-      <% @user.owned_leagues.each do |league| %>
-        <%= render partial: "leagues/mini", locals: { league: league } %>
-      <% end %>
-    </div>
-  <% end %>
 </div>
