--- a/app/views/seasons/_user_games.html.erb
+++ b/app/views/seasons/_user_games.html.erb
@@ -50,7 +50,8 @@
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
-        <h3>Update game result</h3>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true"><i class="fa fa-times"></i></span></button>
+        Update game result
       </div>
       <div class="modal-body">
         <iframe id="gameResultIframe" style="width:100%; height:300px; border:0;" src="/blank"></iframe>
