--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -31,10 +31,11 @@
       <ul class="nav navbar-nav">
         <li class="dropdown">
           <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button">
-            <i class="fa fa-user"></i> <i class="fa fa-caret-down"></i>
+            <i class="fa fa-user"></i> <% if logged_in? %><span class="visible-xs-inline"><%= current_user.display_name %></span> <% end %><i class="fa fa-caret-down"></i>
           </a>
           <ul class="dropdown-menu">
             <% if logged_in? %>
+              <li class="dropdown-header hidden-xs"><%= current_user.display_name.truncate(25) %></li>
               <li><%= link_to "Profile", my_profile_path %></li>
               <li class="divider"></li>
               <li class="dropdown-header">My Leagues</li>
