--- a/app/views/leagues/nearby.html.erb
+++ b/app/views/leagues/nearby.html.erb
@@ -1,11 +1,21 @@
-<div id="map" style="width:100%; height:450px;"></div>
+<h1>Nearby Leagues</h1>
+<div class="row">
+  <div class="col-md-4">
+    <div id="nearby-leagues" class="list-unstyled"></div>
+  </div>
+  <div class="col-md-8">
+    <div id="map" style="width:100%; height:450px;"></div>
+  </div>
+</div>
 
 <script type="text/javascript">
 var pos = { lat: 0, lng: 0 }
-var markerData = {}
+var markerData = [];
+var map = null;
+var myLocation = null;
 
 function initMap() {
-  var map = new google.maps.Map(document.getElementById('map'), {
+  map = new google.maps.Map(document.getElementById('map'), {
     zoom: 12,
     center: pos
   });
@@ -14,20 +24,24 @@ function initMap() {
     navigator.geolocation.getCurrentPosition(function(position){
       pos = new google.maps.LatLng(position.coords.latitude,position.coords.longitude);
       map.setCenter(pos);
-      searchMap(pos,map);
+
+      myLocation = new google.maps.Marker({ position: pos, map: map, title: "My location", zIndex: 0 });
+      var infoWindow = new google.maps.InfoWindow({
+        content: '<h3>Your location</h3>'
+      });
+      myLocation.addListener('click',function(){
+        infoWindow.open(map,myLocation);
+      });
     });
   } else {
     alert("Your browser doesn't support geolocation");
   }
 
-  google.maps.event.addListener(map, "zoom_changed", function() {  setTimeout(function(){searchMap(map.getCenter(),map);},3000); });
-
-  google.maps.event.addListener(map,'center_changed', function() {
+  google.maps.event.addListener(map,'idle', function() {
     pos = map.getCenter();
-    setTimeout(function(){
-      searchMap(pos,map);
-    },3000);
+    searchMap(pos,map);
   });
+
 }
 
 function searchMap(coordinates,map){
@@ -36,35 +50,66 @@ function searchMap(coordinates,map){
     url: "<%= search_api_leagues_path %>",
     data: {
       c: coordinates,
-      r: 30
+      r: viewableRadius()
     },
     dataType: "json",
     success: function(d,s,x){
-      $(markerData).each(function(i,m){ m.setMap(null); });
-      markerData = []
-      $(d).each(function(i,m){
-        marker_pos = new google.maps.LatLng(parseFloat(m["lat"]),parseFloat(m["lng"]));
-        var infoWindow = new google.maps.InfoWindow({
-          content: "<h3>"+m["display_name"]+"</h3><p>"+m["location"]+"</p>"
-        });
-        var marker = new google.maps.Marker({
-          position: marker_pos,
-          icon: "<%= root_url %>mapicon.png",
-          animation: google.maps.Animation.DROP
-        })
-        marker.addListener('click',function(){
-          infoWindow.open(map,marker);
-        });
-        markerData.push(marker);
-      });
+      deleteMarkers();
+      addMarkers(d);
     }
+  });
+}
+
+function addMarkers(markers){
+  $(markers).each(function(i,m){
+    marker_pos = new google.maps.LatLng(parseFloat(m["lat"]),parseFloat(m["lng"]));
+    var infoWindow = new google.maps.InfoWindow({
+      content: '<h3><a href="'+m["url"]+'">'+m["display_name"]+'</a></h3><p>'+m["location"]+'</p>'
+    });
+    var marker = new google.maps.Marker({
+      position: marker_pos,
+      //icon: "<%= root_url %>mapicon.png",
+      label: m["label"],
+      zIndex: i+1
+    })
+    marker.addListener('click',function(){
+      infoWindow.open(map,marker);
+    });
+    markerData.push(marker);
+
+    $('#nearby-leagues').append('<h3>'+m["label"]+' &ndash; <a href="'+m["url"]+'">'+m["display_name"]+'</a> <small>'+m["location"]+'</small></h3>');
   });
   $(markerData).each(function(i,m){ m.setMap(map); });
 }
 
 function deleteMarkers() {
   clearMarkers();
-  markers = [];
+  markerData = [];
+}
+
+function clearMarkers(){
+  $(markerData).each(function(i,m){ m.setMap(null); });
+  $('#nearby-leagues').html("");
+}
+
+function viewableRadius(){
+  var bounds = map.getBounds();
+
+  var center = bounds.getCenter();
+  var ne = bounds.getNorthEast();
+
+  // r = radius of the earth in statute miles
+  var r = 3963.0;  
+
+  // Convert lat or lng from decimal degrees into radians (divide by 57.2958)
+  var lat1 = center.lat() / 57.2958; 
+  var lon1 = center.lng() / 57.2958;
+  var lat2 = ne.lat() / 57.2958;
+  var lon2 = ne.lng() / 57.2958;
+
+  // distance = circle radius from center to Northeast corner of bounds
+  return r * Math.acos(Math.sin(lat1) * Math.sin(lat2) + 
+      Math.cos(lat1) * Math.cos(lat2) * Math.cos(lon2 - lon1));
 }
 
 $(document).ready(initMap);
