mail settings; fix html markup for menu dividers; force ssl

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" xml:lang="fr" xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <title><%= page_title %></title>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
@@ -12,6 +12,9 @@
     <!-- WebFonts -->
     <link href='//fonts.googleapis.com/css?family=Coda' rel='stylesheet' type='text/css'>
     <link href='//fonts.googleapis.com/css?family=Source+Serif+Pro:400,600' rel='stylesheet' type='text/css'>
+
+    <!-- ads -->
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     
     <%# <!-- NetrunnerDB card integration --> %>
     <%# <%= stylesheet_link_tag "http://cdnjs.cloudflare.com/ajax/libs/qtip2/2.1.1/jquery.qtip.css","http://netrunnerdb.com/bundles/netrunnerdbbuilder/css/icons.css" %1> %>
