--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -15,7 +15,7 @@
           <ul class="dropdown-menu">
             <li><%= link_to "Online leagues", leagues_path(t: "online") %></li>
             <li><%= link_to "Offline leagues", leagues_path(t:"offline") %></li>
-            <li class="divider"</li>
+            <li class="divider"></li>
             <li><%= link_to "All leagues", leagues_path %></li>
           </ul>
         </li>
